feat: update main-service to event-service